--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_cam_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_cam_notes.html
@@ -5,46 +5,103 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/Digital_Tech/DigiTech_note_CAD.jpg)" title="metal background">
+                <h1 style="color:white"><u><b>Computer Aided Manufacture (CAM) and rapid prototyping</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+
+                <div class="notes-content-subheader">
+                    <h2><hr>What is Computer Aided Manufacture (CAM)?<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
+                <h3><li>Automated machinery that is controlled by software to manufacture physical parts</li>
+                    <li>CAM uses Computer Numerical Control (CNC) and CAD files to generate 3D tool paths for the machinery to follow</li>
+                    <li>CAM machines include laser cutters, embroidery machines, CNC milling machines, routers and lathes</li></h3>
+
+                <h3><u><b>CAM software:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Very accurate/eliminates human error</li>
+                                <li>Repetitive accuracy</li>
+                                <li>Save and reload drawings to suit demand</li>
+                                <li>High speed/can run 24/7</li>
+                                <li>Reduced labour costs</li>
+                                <li>Increased health and safety due to machines covering dangerous human jobs</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>High set up costs</li>
+                                <li>Training people to use/fix CNC machines can be difficult</li>
+                                <li>Workers being replaced by machines leads to low worker moral</li>
+                                <li>High skilled engineers need to be employed to fix comples machines - expensives</li>
+                                <li>Can't detect faults easily</li>                            
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+                <h3 id="CNCMachines"><u><b>CNC machines:</b></u></h3>
+                <p><strong>There are many different types of CNC machines:</strong></p>
+                <ul>
+                    <li><strong>Laser Cutting:</strong> Uses a high-powered laser to cut or engrave materials with precision.</li>
+                    <li><strong>Routing:</strong> A CNC router moves a spinning cutting tool to carve and shape materials like wood, plastic, and metal.</li>
+                    <li><strong>Milling:</strong> A rotating cutting tool removes material to create complex shapes and features.</li>
+                    <li><strong>Turning:</strong> Involves rotating the workpiece while a cutting tool removes material, commonly used for cylindrical parts.</li>
+                    <li><strong>Plotter Cutting:</strong> Uses a blade or laser to cut materials like paper, vinyl, and fabric for signage and packaging.</li>
+                </ul>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Can run 24/7</li>
+                                <li>Designs can be manufactured many times</li>
+                                <li>Less skilled employees needed</li>
+                                <li>CNC machine can be improved through software updates</li>
+                                <li>Reduced labour costs</li>
+                                <li>Repeatable accuracy</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>High set up costs</li>
+                                <li>Increased unemployment</li>
+                                <li>Old skills lost</li>                          
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3><b>Topic test:</b></h3>
 
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\digital_tech_exercises\Computer_aided_manufacture_Q&A.pdf">Computer Aided Manufacture (CAM) Questions</a>
+                </div> 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
