--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_composites_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_composites_notes.html
@@ -6,45 +6,247 @@
 
 <body>
     <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/matnoteComposite.jpg)" title="composites background">
+                <h1 style="color:white"><u><b>Composites</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <div class="notes-content-subheader">
+                        <h2><hr>Composite: a mixture of two or more materials combined to improve the materials properties (e.g. corrosion resistance)<hr></h2>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="Carbonfibre"><b><u>Carbon fibre reinforced plastic (CFRP):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lightweight</li>
+                                <li>High tensile strength</li>
+                                <li>Durable</li>
+                                <li>Corrosion resistant</li>
+                                <li>Good electrical conductor</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can break/shatter</li>
+                                <li>Brittle</li>
+                                <li>Relatively expensive</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>F1 cars, bicycles, tennis rackets<br><br><br><br></h3>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="GRP"><u><b>Glass reinforced plastic (GRP):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Good strength to weight ratio</li>
+                                <li>Good tensile strength</li>
+                                <li>Can be repaired easily (patch kits etc)</li>
+                                <li>Corrosion resistant</li>
+                                <li>Durable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Brittle/can shatter easily</li>
+                                <li>Not very heat resistant</li>                            
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Piping, boat hulls, fighter planes<br><br><br><br></h3>
 
+                <h3 id="Tungsten carbide"><u><b>Tungsten Carbide:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Extremely hard and wear-resistant.</li>
+                                <li>High melting point, suitable for high-temperature applications.</li>
+                                <li>Excellent strength and durability.</li>
+                                <li>Resistant to corrosion and chemical damage.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Brittle under extreme impact, leading to fractures.</li>
+                                <li>Expensive to manufacture.</li>
+                                <li>Heavy compared to alternative materials.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <h3><b>Uses:</b> Cutting tools, wear-resistant coatings, and jewellery<br><br><br><br></h3>
+
+
+                <h3 id="Aluminium composite board"><u><b>Aluminium Composite Board:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lightweight yet strong due to its composite structure.</li>
+                                <li>Weather-resistant and durable, making it suitable for outdoor use.</li>
+                                <li>Easy to cut, shape, and install.</li>
+                                <li>Corrosion-resistant and low maintenance.</li>
+                                <li>Available in various finishes and colours for aesthetic applications.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Not as strong as solid aluminium or steel.</li>
+                                <li>Can be expensive compared to other panel materials.</li>
+                                <li>Not suitable for high-impact applications.</li>
+                                <li>May dent under strong force.</li>
+                                <li>Composite layers can delaminate over time if poorly manufactured.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <h3><b>Uses:</b> Signage, cladding, interior panels, furniture, and shop fittings<br><br><br><br></h3>
+
+
+                <h3 id="Concrete"><u><b>Concrete:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Can be moulded into a variety of 3D forms</li>
+                                <li>Enhances physical and mechanical properties when reinforced</li>
+                                <li>Ease of manufacture for certain uses compared to traditional materials</li>
+                                <li>Improved product performance, especially in construction</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be brittle if not reinforced properly</li>
+                                <li>Heavy and difficult to transport</li>
+                                <li>Requires significant curing time</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Construction, reinforced concrete structures, pavements<br><br><br><br></h3>
+
+                <h3 id="ReinforcedConcrete"><u><b>Reinforced Concrete:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Combines the compressive strength of concrete with the tensile strength of steel</li>
+                                <li>Improved durability and resistance to cracking</li>
+                                <li>Can be moulded into various shapes for different applications</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>More expensive due to the cost of steel reinforcement</li>
+                                <li>Heavy and difficult to transport</li>
+                                <li>Requires skilled labour for installation</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Building foundations, bridges, tunnels, structural frames<br><br><br><br></h3>
+
+                <h3 id="FibreCement"><u><b>Fibre Cement:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Durable and resistant to weathering</li>
+                                <li>Non-combustible and provides fire resistance</li>
+                                <li>Low maintenance and long-lasting</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be heavy and difficult to handle</li>
+                                <li>Requires special tools for cutting and installation</li>
+                                <li>Can be brittle under certain conditions</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Roofing, cladding, facades, flooring<br><br><br><br></h3>
+
+                <h3 id="EngineeredWood"><u><b>Engineered Wood (e.g., Glulam):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Strong and lightweight with high strength-to-weight ratio</li>
+                                <li>Can be customised to various shapes and sizes</li>
+                                <li>Environmentally friendly, using renewable wood resources</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>May require chemical treatment to improve durability</li>
+                                <li>Vulnerable to moisture and pests if not treated properly</li>
+                                <li>Can be more expensive than traditional timber</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Structural beams, bridges, roof trusses, architectural features<br><br><br><br></h3>
+
+
+
+
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\Materials\Composites_Q&A.pdf">Composite Questions</a>
+                </div>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
