--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html
@@ -5,46 +5,238 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">  
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/safeWorkingPractice.jpg)" title="metal background">
+                <h1 style="color:rgb(212, 205, 205)"><u><b>Safe working practices</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+                <div class="notes-content-subheader">
+                    <h2 id="Act1974"><hr>Health and safety at work act (1974):<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
+            <h3>
+                <ul>
+                    <li>Under this act of parliament, employers are legally required to do all that is reasonably practicable to ensure the health, safety and welfare at work of employees</li>
+                    <li>This also applies to the health and safety of non-employees such as students and visitors to the school</li>
+                    <li>The following regulations are procedures to safeguard the risk of injury to people</li>
+                </ul></h3>
+
+            <h3><b>Personal protective equipment (PPE):</b>
+                <ul>
+                    <li>Personal protective equipment at work regulation (1992) state that employers have basic duties concerning the provision and use of PPE at work</li>
+                    <li>PPE is defined as all equipment which is intended to be worn or held by a person at work and which protects them against one or more risks to their health and safety</li>
+                    <li>The main requirement of the regulation is that PPE is to be supplied and used at work whereever there are risks to health and safety that can't be controlled in other ways</li>
+                </ul></h3>    
+
+            <h3>The regulations also require that PPE is:
+                <ul>
+                    <li>Properly assessed before use to ensure it is suitable</li>
+                    <li>Maintained and stored properly</li>
+                    <li>Provided with instructions on how to use it safely</li>
+                    <li>Used correctly by employees</li>
+                </ul></h3>
+
+            <h3><b>Signage:</b>
+                <ul>
+                    <li>The safety signs regulation require employees to display an appropriate safety sign and instruction wherever a significant risk cannot be avoided or reduced by other means</li>
+                </ul></h3>
+
+
+            <div class="notes-content-subheader">
+                <h2 id="COSHH"><hr>Control of substances hazardous to health (COSHH) regulation:<hr></h2>
+            </div>
+
+        <h3>
+            <ul>
+                <li>Legislation to prevent, reduce or control people's exposure to hazardous substance in the workplace</li>
+            </ul></h3>
+
+        <h3>Hazardous substances include:
+            <ul>
+                <li>Substances used directly in work activities such as adhesives, paints and cleaning agents</li>
+                <li>Substances generated during work activites such as fumes from soldering and welding</li>
+                <li>Naturally occurring substances such as dust</li>
+                <li>Biological agents such as bacteria and other mircro-organisms</li>
+                <li>Chemicals</li>
+                <li>Fumes</li>
+                <li>Mists</li>
+                <li>Biological agents</li>
+                <li>Vapours</li>
+                <li>Dusts</li>
+                <li>Nanotechnology</li>
+                <li>Germs that cause disease</li>
+            </ul></h3>
+            <h3><b>Uses: </b>Paints, glues, bleach<br><br></h3>
+
+        <h3>Issues that need to be considered under COSHH regulations:
+            <ul>
+                <li>Safe storage</li>
+                <li>Chemical ingredients</li>
+                <li>Measures to take if ingested/comes into contact with skin/eyes</li>
+                <li>Disposal instructions</li>
+                <li>Instructions on how to use substances correctly</li>
+                <li>What PPE needs to be worn</li>
+            </ul></h3>
+
+        <h3><b>Volatile organic compounds (VOCs):</b>
+            <ul>
+                <li>Give off vapours that can cause dizziness and nausea</li>
+                <li>Hazardous when used in confined areas</li>
+                <li>Risk assessment must be carried out with VOCs to reduce their danger</li>
+            </ul></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Safe working practice<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
+                <h3><b><u>Safe working practices usually cover the following aspects:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>Training</li>
+                    <li>Machine maintenance and guarding</li>
+                    <li>Extraction systems</li>
+                    <li>Provision of PPE</li>
+                    <li>Accident reporting</li></ul>
+
+                <h3><b><u>Employers:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>Welfare facilities provided (first aid kits etc)</li>
+                    <li>How dangerous items and substances are stored safely</li>
+                    <li>Ensure correct PPE is provided</li>
+                    <li>Making sure machinery has guards, safe to use, maintained in working order</li>
+                    <li>Appropriate safety signage</li>
+                    <li>Accident reporting system in place (RIDDOR - reporting injuries, diseases and dangerous occurences regulations)</li></ul>
+
+                <h3><b><u>Employees:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>Take responsible care for their own health</li>
+                    <li>Use the PPE provided</li>
+                    <li>Use machinery in line with training instructions</li>
+                    <li>Report any accidents, near misses or dangerous events</li></ul>
+
+                <h3 id="Training"><b><u>Training:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>Employees trained in safe use of machinery and equipment</li>
+                    <li>Training may be done in-house</li>
+                    <li>May require formal certification</li></ul>
+
+                <h3 id="MachineMaintenanceGuarding"><b><u>Machine maintenance and guarding:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>All machinery part of regular maintenance</li>
+                    <li>Blades are replaced as required</li>
+                    <li>Gears are lubricated</li>
+                    <li>Proves the machine is adequately looked after in case of legal case</li>
+                    <li>Machinery should have correct guards to protect employee</li>
+                    <li>Could use micro switches (laser cutter, turns it off)</li></ul>
+
+                <h3 id="ExtractionSystems"><b><u>Extraction systems:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>If workshop processes produce any dust/fumes extraction must be produced</li>
+                    <li>Extraction systems ensure timber dust/welding fumes are extracted at the source</li>
+                    <li>Stops harmful airbrone particles being inhaled</li>
+                    <li>Extraction systems must be regularly maintained, usually done by an external company on a 12-14 month schedule</li></ul>
+
+                <h3 id="ProvisionPPE"><b><u>Provision of PPE:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>Employers should ensure that personal protective equipment is available to any employee</li>
+                    <li>Can include safety helmets, eye protection, dust masks, respiratory equipment, high visibility clothing, safety footwear and gloves</li>
+                    <li>Properly assessed before use to ensure it is suitable</li>
+                    <li>Maintained and stored properly</li>
+                    <li>Provided with instructions on how to use it safely</li>
+                    <li>Used correctly by employees</li></ul>
+
+                <h3 id="GeneralSafeWorkingPractices"><b><u>General safe working practices:</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>Work areas should be kept clean/neat/free of hazards</li>
+                    <li>Spillages should be reported</li>
+                    <li>All personnel aware of emergency procedures (fire alarm/location of fire extinguishers etc)</li>
+                    <li>Walkways should be kept clear/free of trip hazards</li>
+                    <li>Injury/illness must be reported to a supervisor</li>
+                    <li>Knowing where the designated safe walkways are (common in factories)</li>
+                    <li>Forklift trucks fitted with lights/reversing alarm to alert those around (common in factories)</li>
+                    <li>Job rotation so workers are not at risk of repetitive strain injuries (common in factories)</li></ul>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
                     </div>
-                </div>
+
+                    <h3 id="HealthSafetyExecutive"><b><u>Health and Safety Executive (HSE):</b></u></h3>
+                    <p>The HSE are a national independent watchdog for work related health, safety and illness</p>
+                <ul style="font-size: medium;">                    
+                    <li>The HSE helps companies and employers to meet health and safety obligations</li>
+                    <li>They produce guidance documents and investigate accidents in the workplace</li></ul>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr>Understanding the need for risk assessmnets<hr></h2>
+                    </div>
+
+                    <h3 id="IdentificationPotentialHazards"><b><u>Identification of potential hazards:</b></u></h3>
+                    <p>Use risk assessments to identify potential hazards in the workplace (must be reviewed regularly)</p>
+                <ul style="font-size: medium;">                    
+                    <li>Risk assessments must be carried out by law, and should be recorded where there are 5 or more employees</li>
+                    <li>Must consider what might cause harm to people</li>
+                    <li>Considers whether reasonable steps are being taken to prevent injury</li>
+                    <li>Employers can't remove all risks - must identify the risks and try to minimise the risk of injury</li></ul>
+
+                    <h3 id="IdentifyingPeopleAtRisk"><b><u>Identifying the people at risk:</b></u></h3>
+                    <p>The employee:</p>
+                <ul style="font-size: medium;">                    
+                    <li>Machines malfunctioning</li>
+                    <li>Repetitive strain injuries</li>
+                    <li>Hazard warnings not in place leading to injury/illness</li></ul>
+
+                    <p>The employer:</p>
+                <ul style="font-size: medium;">                    
+                    <li>Legal cases if correct laws are not followed</li>
+                    <li>Company being shut down if they fail to meet HSE standards</li></ul>
+
+                    <p>The customer:</p>
+                <ul style="font-size: medium;">                    
+                    <li>Designer and manufacturers need to consider the safety of the potential user of the product, and ensure that the product is safe to use</li>
+                    <li>To help protect the user, many products have specific legislation and standards that specify certain requirements that the product must meet</li>
+                    <li>The include suitable safety levels and the right for the consumer to get their money back if goods are found to be faulty or do not perform as the manyfacturer claims</li></ul>
+
+                    <h3 id="EvaluationRisk"><b><u>Evaluation of risk:</b></u></h3>
+                    <p>If there is a potential risk, they are evaluated to see how they could be reduced or prevented (e.g. flying debris prevented by machinery guards)</p>
+
+                    <h3 id="RiskAssessments"><b><u>Risk assessmnets:</b></u></h3>
+                <ul style="font-size: medium;">                    
+                    <li>Employer required to carry out risk assessmnet by law where there are 5 or more employers</li>
+                    <li>Considers what might cause harm</li>
+                    <li>Considers what reasonable steps are taken to prevent harm</li>
+                    <li>Not all risks can be eliminated, however, reasoable practicable measures to identify potential hazards and minimise the risk can be undertaken</li></ul>
+
+                    <h3 id="ImplementControlMethods"><b><u>Implement control methods:</b></u></h3>
+                <ul style="font-size: medium;">                    
+                    <li>Guards properly maintained</li>
+                    <li>Machinery properly maintained</li>
+                    <li>Training</li>
+                    <li>Rules in job place</li>
+                    <li>Following HSE advice/guidlines</li></ul>
+
+                    <h3 id="RecordingStoringRiskAssessmentDocumentation"><b><u>Recording and storing of risk assessmnet documentation:</b></u></h3>
+                    <p>Documentation of risks and how to store item must be recorded and stored in the workplace (e.g. COSHH data sheets, BSI, CE, ISO)</p>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="\documents\Q&A\safe_working_practices_exercises\Adopting_safe_working_practices_Q&A.pdf">Adopting Safe Working Practices</a>
+                    </div>
+
+
 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
