--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/classification_of_materials_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/classification_of_materials_notes.html
@@ -3,48 +3,69 @@
     <head>
         <script src="/head.js" defer></script>
     </head>
-
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="container">
+        <header>
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_alloy.jpg)" title="material classification background">
+                <h1 style="color:white"><u><b>Classification of Materials</b></u></h1>
+            </div>
+        </header>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+        <div class="notes-content-wrapper">
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <p>This page explains the unique properties and examples of different material classifications.</p>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3><b><u>Metals (Ferrous, Non-Ferrous, Alloys):</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Ferrous metals contain iron, while non-ferrous metals do not.</li>
+                    <li><b>Example:</b> Steel (ferrous), Aluminum (non-ferrous), Bronze (alloy)</li>
+                </ul>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3><b><u>Woods (Hardwoods, Softwoods, Manufactured Boards):</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Hardwoods come from broadleaf trees, while softwoods come from conifers. Manufactured boards are engineered wood products.</li>
+                    <li><b>Example:</b> Oak (hardwood), Pine (softwood), MDF (manufactured board)</li>
+                </ul>
+
+                <h3><b><u>Polymers (Thermoplastics, Thermoset Polymers, Elastomers):</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Thermoplastics can be reheated and reshaped, thermosets form permanent shapes, and elastomers are flexible and stretchable.</li>
+                    <li><b>Example:</b> Polyethylene (thermoplastic), Urea Formaldehyde (thermoset), Rubber (elastomer)</li>
+                </ul>
+
+                <h3><b><u>Papers and Boards:</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Made from cellulose fibers, often used for packaging and writing materials.</li>
+                    <li><b>Example:</b> Cardboard, Tissue paper</li>
+                </ul>
+
+                <h3><b><u>Composites:</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Materials made from two or more different substances to enhance properties.</li>
+                    <li><b>Example:</b> Carbon fibre reinforced plastic (CFRP), Concrete</li>
+                </ul>
+
+                <h3><b><u>Smart Materials:</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Change their properties in response to external stimuli (e.g., temperature, light).</li>
+                    <li><b>Example:</b> Shape-memory alloys, Photovoltaic cells</li>
+                </ul>
+
+                <h3><b><u>Modern Materials:</u></b></h3>
+                <ul>
+                    <li><b>Unique Property:</b> Materials developed for advanced technological applications with enhanced performance.</li>
+                    <li><b>Example:</b> Graphene, Carbon nanotubes</li>
+                </ul>
 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
