--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_rapid_prototyping_processes_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_rapid_prototyping_processes_notes.html
@@ -5,46 +5,63 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/Digital_Tech/DigiTech_note_CAD.jpg)" title="metal background">
+                <h1 style="color:white"><u><b>Rapid prototyping (3D printing)</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+                <h3 id="Rapidprototyping"><u><b>Rapid prototyping (3D printing):</b></u></h3>
+                <table>
+                    <li>Models made using computer-based technology such as a 3D printer<br><br/></li>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Fast process with minimal human input</li>
+                                <li>Can be done cheaply/quickly</li>
+                                <li>3D models can be made to check for errors</li>
+                                <li>Can be used for marketing pictures</li>
+                                <li>Designers can evaluate design</li>
+                                <li>Avoids high cost of errors in final production</li>
+                                <li>Prototypes are made faster/work 24/7</li>
+                                <li>Prototypes are made more accurately and of higher quality</li>
+                                <li>Prototypes cam be complex with fine details</li>
+                                <li>Changes and edits are easy to produce</li>
+                                <li>More modifications and variations can be considered</li>
+                                <li>Better testing and analysis of product can be undertaken</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Not as quick as some methods</li>
+                                <li>Can only make small scale designs</li> 
+                                <li>Need specific material for specific 3D printing machines</li>
+                                <li>Limited materials can be 3D printed</li>                      
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3><b>Topic test:</b></h3>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\digital_tech_exercises\Computer_aided_manufacture_Q&A.pdf">Computer Aided Manufacture (CAM) Questions</a>
+                </div> 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
