--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_virtual_modelling_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_virtual_modelling_notes.html
@@ -5,46 +5,116 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/Digital_Tech/DigiTech_note_CAD.jpg)" title="metal background">
+                <h1 style="color:white"><u><b>Virtual modelling</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+                <h3 id="Simulation"><u><b>Simulation:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Allows for testing and visualising designs before physical production</li>
+                                <li>Provides immersive experiences for product testing, such as VR environments</li>
+                                <li>Helps identify potential issues early in the development process</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be expensive to set up and maintain</li>
+                                <li>May not perfectly replicate real-world conditions</li>
+                                <li>Requires specialized software and hardware for effective use</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> VR headsets for design testing, automotive simulations, architectural walkthroughs<br><br></h3>
+
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Finite Element Analysis<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
+                <h3 id="FiniteElementAnalysis"><b>Finite Element Analysis (FEA):</b> FEA is a computer run numerical method used to predict how an object/structure will behave under given conditions (e.g. loads and stresses). It can be used to find weak spots in designs and points of failure.</h3>
+                <h3 id="FiniteElementAnalysis"><u><b>Finite Element Analysis (FEA):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Provides detailed insight into stress, strain, and deformation</li>
+                                <li>Can simulate complex structures and loading conditions</li>
+                                <li>Improves design accuracy and reduces physical testing</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Requires significant computational resources</li>
+                                <li>Model setup can be time-consuming and complex</li>
+                                <li>Results can be sensitive to input assumptions and boundary conditions</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Structural analysis, thermal analysis, vibration analysis, product design<br><br></h3>
+
+                
+                <div class="notes-content-subheader">
+                    <h2><hr>Computational Fluid Dynamics<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
+                <h3 id="Computationalfluiddynamics"><b>Computational fluid dynamics (CFD):</b> CFD is a computer run numerical method used to study how steady and unsteady fluids (e.g. Gas and Liquids) flow over objects. It is often used for aerodynamic study.</h3>
+                <h3 id="ComputationalFluidDynamics"><u><b>Computational Fluid Dynamics (CFD):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Provides detailed flow analysis for complex geometries</li>
+                                <li>Helps optimise designs for fluid flow and heat transfer</li>
+                                <li>Reduces the need for costly physical testing</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Requires high computational power and resources</li>
+                                <li>Model setup and simulations can be time-consuming</li>
+                                <li>Results depend on accurate input data and boundary conditions</li>                             
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Airflow simulations, heat transfer analysis, fluid flow optimisation, automotive design<br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
 
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\digital_tech_exercises\Computer_aided_design_Q&A.pdf">Computer Aided Design (CAD) Questions</a>
+                </div> 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
